# Claude-Code-PTY

./: .gitignore  .mcp.json  CLAUDE.md  PROGRESS.md  README.md  TODO.md  pyproject.toml
docs/: claude-pty-report.html  pty-interactive-mode.md  pty-journey.html  pty-open-source-research.md  pty-solution.html  pty-solution.md  pty-vs-pipe-summary.md
src/claude_pty/: __init__.py  _env.py  bridge.py  channel_server.py  config.py  events.py  exceptions.py  jsonl_reader.py  pool.py  pty_process.py  session.py  subagents.py
src/claude_pty/adapters/: __init__.py  base.py  ccm.py
tests/: test_bridge.py  test_channel_server.py  test_config.py  test_env.py  test_events.py  test_full_features.py  test_inject_isolation.py  test_integration.py  test_jsonl_reader.py  test_phase1.py  test_pool.py  test_pty_process.py  test_turn_alignment.py
